/**
* To generate files, run the following command in this directory:
* protoc --java_out=../java  messages.proto
*/

syntax = "proto3";

package com.codeahoy.rocksolid.message;

option java_package = "com.codeahoy.rocksolid.protocol";
option java_outer_classname = "ProtocolBufferMessages";

// ----------------------------------------------------------------------------
// Requests
// ----------------------------------------------------------------------------

message Request {
    enum Type {
        SERVERTIME = 0;
        LOGIN=1;
    }

    Type type = 1;

    oneof request {
        ServerTimeRequest server_time = 2;
        LoginRequest login_request = 3;
    }
}

message ServerTimeRequest {
    string transaction_id = 1;
}

message LoginRequest {
    string transaction_id = 1;
    string id = 2;
}


// ----------------------------------------------------------------------------
// Responses
// ----------------------------------------------------------------------------


message Response {
    enum Type {
        SERVERTIME = 0;
        LOGIN=1;
    }

    Type type = 1;

    oneof response {
        ServerTimeResponse server_time = 2;
        LoginResponse login_response = 3;
    }
}

// ----------------------------------------------------------------------------
// Server time response
// ----------------------------------------------------------------------------
message ServerTimeResponse {
    string transaction_id = 1;
    string server_time = 2;
}

// ----------------------------------------------------------------------------
// Login response
// ----------------------------------------------------------------------------
message LoginResponse {
    string transaction_id = 1;
    uint32 code = 2;
    string message = 3;
}